# daily-admin-agent-security-eval

./: .env.example  .gitignore  CITATION.md  LICENSE  README.md  eval_design_note.md  pyproject.toml  results_summary.md  risk_coverage.md
daily_admin_benchmark/: __init__.py  agentdojo_compat.py  benchmark.py  model_adapters.py  report_results.py  resume_missing.py  run_deepseek.py  run_model.py
daily_admin_benchmark/data/suites/daily_admin/: environment.yaml  injection_vectors.yaml
daily_admin_benchmark/suites/: __init__.py
daily_admin_benchmark/suites/daily_admin/: __init__.py  injection_tasks.py  task_suite.py  tools.py  user_tasks.py
docs/: openai_codex_cli_note.md  siliconflow_model_shortlist.md
results/: deepseek_cross_tool_full50.md  deepseek_embedded_procedure_payout_success.md  deepseek_tool_knowledge_matrix.md  deepseek_tool_knowledge_matrix_curated.md  deepseek_tool_knowledge_matrix_expanded.md  siliconflow_cross_tool_smoke.md
results/cross_model_user_task_0/: README.md  attackability_rank.csv  coverage_status.csv  injection_rollup.csv  missing_paired_runs.csv  model_summary.csv  pair_results.csv  risk_category_rollup.csv  standalone_injection_results.csv  statistical_analysis.md  task_risk_map.csv  task_risk_map.md
tests/: test_daily_admin_suite_files.py  test_model_runner.py  test_report_results.py  test_resume_missing.py
