[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-admin-agent-security-eval"
version = "0.1.0"
description = "An AgentDojo suite for daily-admin agent security evaluation."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Leo Qin"}
]
keywords = ["agents", "security", "evals", "prompt-injection", "llm", "agentdojo"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Topic :: Security",
]
dependencies = [
  "agentdojo>=0.1.35,<0.2",
  "click>=8",
  "openai>=1",
  "python-dotenv>=1",
  "rich>=13",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["daily_admin_benchmark*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
